--- a/css/app.css
+++ b/css/app.css
@@ -6,6 +6,7 @@
 @import url("./message-container.css");
 @import url("./send-message-form.css");
 @import url("./message-list.css");
+@import url("./login-from.css");
 *{
     font-family: 'Open Sans', sans-serif;
     padding: 0;
