--- a/css/register-from.css
+++ b/css/register-from.css
@@ -14,3 +14,15 @@
     margin-bottom: 10px;
     text-align: center;
 }
+.register-btn{
+    padding: 10px 30px;
+    border-radius: 3px;
+    background-color: #4a8af4;
+    border: none;
+    color: #ffffff;
+    font-size: 15px;
+    line-height: 10px;
+}
+.register-btn:hover{
+    background-color: blue;
+}
