--- a/css/input-wrapper.css
+++ b/css/input-wrapper.css
@@ -1,10 +1,11 @@
 .input-wrapper .input-main{
     width: 100%;
-    height: 30px;
+    height: 40px;
     border: 1px solid #cccccc;
     border-radius: 3px ;
     /* không hiện viền border */
     outline: none;
+    margin-bottom: 10px;
 }
 .input-wrapper .input-error{
     color: red;
